# Finite-groups

./: .gitignore  README.md  models  pyproject.toml  so-gappy.yaml
Group addition/: eval.py  groups.py  groups_data.py  model.py  model_viz.py  train.py  utils.py
data/: S5_A5x2_llcs.pt  S5_measures.pt  acc_bound.pt  acc_bound_S4_new.pt  acc_bound_S5.pt  acc_bound_S5_fixed.pt  acc_bound_S5_new.pt  avar_loss_norm.pt  coset_err_margin.pt  irrep_err_margin.pt
notebooks/: README.md  S5_ablate.ipynb  absolute.ipynb  biequivariance.ipynb  complexity_measures.ipynb  coset_bounds.ipynb  cosets.ipynb  decompose_action.ipynb  evals_scratch.ipynb  figs_scratch.ipynb  fourier.ipynb  incorrect_points.ipynb  irrep_basis.ipynb  irrep_coefs.ipynb  irrep_rank1_opt.ipynb  irreps.ipynb  irreps_Dic30.ipynb  irreps_S5.ipynb  irreps_SL_2_5.ipynb  irreps_all.ipynb  irreps_bounds.ipynb  irreps_mechinterp.ipynb  irreps_mechinterp_ambig.ipynb  learning_story.ipynb  linear_classification.ipynb  llc_intersect.ipynb  llc_save.ipynb  llc_v_epoch.ipynb  orig_vs_ideal_loss.ipynb  pca_trajectory.ipynb  perturb.ipynb  plots_scratch.ipynb  scratch.ipynb  sgld_landscape.ipynb  subgroup_irrep_table.ipynb  training_jacobian.ipynb  training_jacobian_jax.ipynb
notebooks/devinterp/: complexity_measures.ipynb  early_stop.ipynb  gen_measures_intersect.ipynb  generalization_measures.ipynb  hmm.ipynb  intrinsic_dimension.ipynb  linear_classification.ipynb  old_devinterp.ipynb  perturb.ipynb  total_variation.ipynb  training_jacobian.ipynb
notebooks/mechinterp/: absolute.ipynb  biequivariance.ipynb  causal.ipynb  cosets.ipynb  embed_sparsity.ipynb  irrep_rank1_opt.ipynb  irreps_bounds.ipynb
notebooks/scratch/: decompose_action.ipynb  llc_save.ipynb  subgroup_irrep_table.ipynb  tsne.ipynb  ungrok.ipynb
scripts/: jupyter.sh  perturb_sweep.sh  poetry_setup.sh  train_sweep.sh
src/: bound_utils.py  coset_bounds.py  eval.py  evals.py  generalization_measures.py  group.py  group_data.py  group_utils.py  groups_data.py  hessian.py  irrep_bounds.py  irreps_mechinterp.py  irreps_mechinterp_old.py  learning_story.ipynb  llc.py  llc_sweeper.py  model.py  model_utils.py  model_viz.py  named_groups.py  nhrun.sh  poetry_setup.sh  pyproject.toml  sweep.sh  train.py  utils.py
src/notebooks/: Untitled.ipynb  evals_scratch.ipynb  group_detect.ipynb  llc_v_epoch.ipynb  mult_table.ipynb  mult_table_scratch.ipynb  scratch.ipynb  sgld_landscape_normal.ipynb
src/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/scripts/: jupyter.sh  poetry_setup.sh  strip_plotly.py
src/tests/: group_test.py  group_tests.py
wandb/: latest-run
wandb/run-20231112_121242-ojaipq3b/: run-ojaipq3b.wandb
wandb/run-20231112_121713-klz0tb3f/: run-klz0tb3f.wandb
wandb/run-20231112_122133-64gye764/: run-64gye764.wandb
wandb/run-20231112_122451-6cx8rrpx/: run-6cx8rrpx.wandb
wandb/run-20231112_122539-2jk489l0/: run-2jk489l0.wandb
(+139 files in other folders)
