[tool.poetry]
name = "group addition"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
wandb = "^0.17.4"
devinterp = "^0.2.2"
jaxtyping = "^0.2.31"
beartype = "^0.18.5"
jupyter = "^1.0.0"
plotly = "^5.22.0"
imageio = "^2.34.2"
ipywidgets = "^8.1.3"
methodtools = "^0.4.7"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
huggingface-hub = "^0.24.6"
einx = "^0.3.0"
tqdm = "^4.67.0"
gappy-system = {git = "https://github.com/wiwu2390/gappy.git"}
# jax = {extras = ["cuda12"], version = "^0.4.38"}
# flax = "^0.10.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
