[tool.poetry]
name = "group addition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
wandb = "^0.17.4"
devinterp = "^0.2.2"
jaxtyping = "^0.2.31"
beartype = "^0.18.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
